--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:fitsSystemWindows="true"
-                    android:scaleType="fitXY" />
+                    android:scaleType="centerCrop" />
 
                 <LinearLayout
                     android:id="@+id/meta_bar"
